[gd_scene load_steps=11 format=2]

[ext_resource path="res://Stages/Depression/Sections/TriggerGoodChallenges/IntermediateJump.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Stages/Depression/TriggerSpawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stages/Depression/Enemies/DeathPit/DeathPit.tscn" type="PackedScene" id=4]
[ext_resource path="res://CameraAdjust.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 480, 20 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 680, 20 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 20, 300 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 20, 230 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 40, 200 )

[node name="IntermediateJump" type="Node2D"]

script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Scenery" type="Node2D" parent="." index="0"]

editor/display_folded = true

[node name="Floor" type="StaticBody2D" parent="Scenery" index="0"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Scenery/Floor" index="0"]

scale = Vector2( 15, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Floor" index="1"]

shape = SubResource( 1 )

[node name="Floor2" type="StaticBody2D" parent="Scenery" index="1"]

editor/display_folded = true
position = Vector2( 1200, -560 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Scenery/Floor2" index="0"]

scale = Vector2( 21.2, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Floor2" index="1"]

shape = SubResource( 2 )

[node name="Floor3" type="StaticBody2D" parent="Scenery" index="2"]

editor/display_folded = true
position = Vector2( 3000, -560 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Scenery/Floor3" index="0"]

scale = Vector2( 21.2, 0.6 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Floor3" index="1"]

shape = SubResource( 2 )

[node name="Wall" type="StaticBody2D" parent="Scenery" index="3"]

editor/display_folded = true
position = Vector2( 500, -280 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Scenery/Wall" index="0"]

scale = Vector2( 0.6, 9.4 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Wall" index="1"]

shape = SubResource( 3 )

[node name="Wall2" type="StaticBody2D" parent="Scenery" index="4"]

editor/display_folded = true
position = Vector2( 170, -350 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Scenery/Wall2" index="0"]

scale = Vector2( 0.6, 7 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Wall2" index="1"]

shape = SubResource( 4 )

[node name="Wall3" type="StaticBody2D" parent="Scenery" index="5"]

editor/display_folded = true
position = Vector2( 170, -800 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Scenery/Wall3" index="0"]

scale = Vector2( 0.6, 7 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scenery/Wall3" index="1"]

shape = SubResource( 4 )

[node name="Spawns" type="Node2D" parent="." index="1"]

editor/display_folded = true

[node name="Spawn" parent="Spawns" index="0" instance=ExtResource( 3 )]

position = Vector2( 430, -85 )
_sections_unfolded = [ "Transform" ]
respawn_time = 2.0

[node name="Spawn2" parent="Spawns" index="1" instance=ExtResource( 3 )]

position = Vector2( 260, -190 )
_sections_unfolded = [ "Transform" ]
respawn_time = 2.0

[node name="Spawn3" parent="Spawns" index="2" instance=ExtResource( 3 )]

position = Vector2( 430, -320 )
_sections_unfolded = [ "Transform" ]
respawn_time = 2.0

[node name="Spawn4" parent="Spawns" index="3" instance=ExtResource( 3 )]

position = Vector2( 260, -440 )
_sections_unfolded = [ "Transform" ]
respawn_time = 2.0

[node name="Spawn5" parent="Spawns" index="4" instance=ExtResource( 3 )]

position = Vector2( 260, -580 )
_sections_unfolded = [ "Transform" ]
respawn_time = 2.0

[node name="Spawn6" parent="Spawns" index="5" instance=ExtResource( 3 )]

position = Vector2( 410, -660 )
_sections_unfolded = [ "Transform" ]
respawn_time = 2.0

[node name="Spawn7" parent="Spawns" index="6" instance=ExtResource( 3 )]

position = Vector2( 1879.47, -643.432 )
_sections_unfolded = [ "Transform" ]
respawn_time = 3.0

[node name="Spawn8" parent="Spawns" index="7" instance=ExtResource( 3 )]

position = Vector2( 2188.38, -644.212 )
_sections_unfolded = [ "Transform" ]
respawn_time = 3.0

[node name="Enemies" type="Node2D" parent="." index="2"]

editor/display_folded = true

[node name="DeathPit" parent="Enemies" index="0" instance=ExtResource( 4 )]

position = Vector2( 2090, -500 )
_sections_unfolded = [ "Transform", "Z Index" ]
width = 460

[node name="DeathPit2" parent="Enemies" index="1" instance=ExtResource( 4 )]

position = Vector2( 2090, -770 )
rotation = 3.14159
_sections_unfolded = [ "Transform", "Z Index" ]
width = 460

[node name="CameraEnter" parent="." index="3" instance=ExtResource( 5 )]

editor/display_folded = true
position = Vector2( -300, -190 )
_sections_unfolded = [ "Transform" ]
top_limit = -1030
bottom_limit = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraEnter/Area2D" index="0"]

shape = SubResource( 5 )

[node name="CameraPartReturn" parent="." index="4" instance=ExtResource( 5 )]

editor/display_folded = true
position = Vector2( 1000, -775 )
_sections_unfolded = [ "Transform" ]
top_limit = -1030
bottom_limit = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraPartReturn/Area2D" index="0"]

shape = SubResource( 5 )
disabled = true

[node name="CameraPart" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 1150, -775 )
_sections_unfolded = [ "Transform" ]
top_limit = -800
bottom_limit = -470
zoom = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraPart/Area2D" index="0"]

shape = SubResource( 5 )

[connection signal="body_entered" from="CameraPartReturn/Area2D" to="." method="_on_CameraPart2Return_enter"]

[connection signal="body_entered" from="CameraPart/Area2D" to="." method="_on_CameraPart2_enter"]


[editable path="CameraEnter"]
[editable path="CameraPartReturn"]
[editable path="CameraPart"]
